--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.2",
     "express": "~4.16.1",
     "marked": "^2.0.3",
